--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <div class="slashMenu">
+        <div class="logo" >logoo0ooooooo</div>
 
         <div class="slashSearch">
             <input class="fieldMenuText" type="text" placeholder="Search" />
@@ -32,11 +33,12 @@
 
     </div>
     <div class="slashOption">
-        <div class="slashObj1Option">tienda</div>
-        <div class="slashObj2Option">juegosPS4</div>
-        <div class="slashObj3Option">juegosPS5</div>
+        <div class="slashObj1Option">Tienda</div>
+        <div class="slashObj2Option">JuegosPS4</div>
+        <div class="slashObj3Option">JuegosPS5</div>
 
     </div>
+    
 
 </body>
 
